<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recipespage">

    <!-- Search Bar -->
    <EditText
        android:id="@+id/recipe_search_bar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:padding="12dp"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:autofillHints="username"
        android:importantForAutofill="yes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Search here" />

    <!-- Featured Recipes RecyclerView -->
    <TextView
        android:id="@+id/featured_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/featured_recipes"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/recipe_search_bar"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/featured_recipes_recycler"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/featured_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_recipe" />

    <!-- Favorites RecyclerView -->
    <TextView
        android:id="@+id/favorites_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/top_favorites"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/featured_recipes_recycler"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/top_favorites_recycler"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/favorites_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_recipe" />

</androidx.constraintlayout.widget.ConstraintLayout>
